--- a/Report/nips_2017.tex
+++ b/Report/nips_2017.tex
@@ -70,12 +70,9 @@
 \maketitle
 
 \begin{abstract}
-  The abstract paragraph should be indented \nicefrac{1}{2}~inch
-  (3~picas) on both the left- and right-hand margins. Use 10~point
-  type, with a vertical spacing (leading) of 11~points.  The word
-  \textbf{Abstract} must be centered, bold, and in point size 12. Two
-  line spaces precede the abstract. The abstract must be limited to
-  one paragraph.
+  Our project approach is to estimate motion blur from a single, blurry image. 
+  We propose a deep learning approach to predict the probabilistic distribution 
+  of motion blur at the patch level using a Convolutional Neural Network (CNN).
 \end{abstract}
 
 \section{Submission of papers to NIPS 2017}
