Final draft for report.

--- a/Report/nips_2017.tex
+++ b/Report/nips_2017.tex
@@ -123,7 +123,15 @@ chose \textit{Adam} as our optimizer as it's the most efficient optimizer for ou
 
 After training with 100 epochs, \textbf{we had testing accuracy of 92\%}, which is a 
 very optimal rate for our model. Our training model is saved in an HDF5 file, 
-\textit{"motionblur.h5"}.  
+\textit{"motionblur.h5"}.
+
+\includegraphics[width=\textwidth]{accuracy} \\
+
+\section{Conclusion}
+In this report, we have proposed a novel CNN-based motion blur detection apporach. We 
+learn an effective CNN for estimating motion blur from local patches. In the future, 
+we are interested in designing a CNN for eastimating motion kernels. We are also interested 
+in design a CNN non-uniform motion deblurring method.   
 
 \section*{Acknowledgement}
 This report has been prepared for the Boston University Machine Learning course (CS 542), 
